# vigia-medical-ai

./: .env.testing  .gitignore  .pylintrc  .ruff.toml  CLAUDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.medical  Dockerfile.minimal  Dockerfile.optimized  Dockerfile.ultra-minimal  HACKATHON_READY.md  INTERNATIONALIZATION_STATUS.md  LICENSE  README.md  SYSTEM_STATUS.md  TESTING_RESULTS.md  apprunner-service.json  apprunner.yaml  dataset_integration_capability_report.json  dataset_integration_test_report.json  demo_professional_ui.py  deploy_to_aws.py  deploy_vigia.py  docker-compose.medical.yml  final_demo.py  fix_autonomos_ssl.py  fix_slack_working_channel.py  hackathon_demo.py  hero-agent-smith.html  hume_ai_test_report.json  install.sh  launch_demo.py  launch_fastapi_web.py  launch_integrated_smartcare.py  launch_modern_ui.py  launch_professional_ui.py  launch_risk_assessment.py  launch_simple_demo.py  launch_smartcare.py  (+25 more)
.ebextensions/: 01_python.config
config/: __init__.py  settings.py
demo/: launch_medical_demo.py  professional_medical_demo.py
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT_ANALYSIS.md  SLACK_SETUP_GUIDE.md  🏥 VIGIA Medical AI - Architecture vs Im.md
docs/diagrams/: 01_system_overview.eraser  02_technical_architecture.eraser  03_critical_user_flow.eraser  04_data_model.eraser  05_external_integrations.eraser  06_deployment_infrastructure.eraser  07_entity_states.eraser  README_DIAGRAMS.md
infrastructure/: app.py  cdk.json  requirements.txt  vigia_stack.py
infrastructure/frontend_deploy/: README.md  app.py  hero-agent-smith.html
lambda/clinical_assessment/: clinical_assessment.py
lambda/communication/: communication.py
lambda/diagnostic/: diagnostic.py
lambda/image_analysis/: image_analysis.py  requirements.txt
lambda/master_orchestrator/: master_orchestrator.py  requirements.txt
lambda/monai_review/: monai_review.py
lambda/monai_review/jmespath-1.0.1.dist-info/: RECORD
lambda/protocol/: protocol.py
lambda/risk_assessment/: risk_assessment.py
lambda/voice_analysis/: voice_analysis.py
scripts/: build_and_push_container.sh  deploy_aws_medical.py  integrate_medical_datasets.py  run_tests.sh  setup_agentops.py  setup_medgemma.py  setup_medgemma_ollama.py  setup_slack_integration.py  simple_dataset_validation.py  test_dataset_integration.py  test_dataset_integration_standalone.py  test_hume_ai_complete.py  test_hume_api_endpoint.py  test_hume_api_simple.py  test_hume_auth_formats.py  test_isolated_dataset_integration.py  test_voice_agent_integration.py  validate_aws_deployment.py  validate_dataset_integration.py  validate_medical_system.py  validate_post_refactor_simple.py
src/: __init__.py
src/a2a/: __init__.py  base_infrastructure.py
src/agents/: __init__.py  agent_factory.py  base_agent.py  clinical_assessment_agent.py  clinical_assessment_agent_adk.py  communication_agent.py  communication_agent_adk.py  communication_bridge.py  diagnostic_agent.py  enhanced_medical_agent_wrapper.py  image_analysis_agent.py  image_analysis_agent_adk.py  lpp_medical_agent.py  master_medical_orchestrator.py  medical_agent_wrapper.py  medical_team_agent.py  monai_review_agent.py  patient_communication_agent.py  protocol_agent.py  protocol_agent_adk.py  risk_assessment_agent.py  voice_analysis_agent.py  workflow_orchestration_agent.py  workflow_orchestration_agent_adk.py
src/agents/adk/: slack_block_kit.py  voice_analysis.py
src/ai/: __init__.py  fallback_handler.py  hume_ai_client.py  medgemma_client.py  medgemma_local_client.py  medical_guardrails.py  medical_prompts.py
src/core/: README.md  __init__.py  async_pipeline.py  base_client.py  base_client_v2.py  celery_config.py  celery_config_original.py  celery_mock.py  constants.py  image_processor.py  input_packager.py  input_queue.py  medical_dispatcher.py  phi_tokenization_client.py  service_config.py  session_manager.py  slack_templates.py  triage_engine.py  unified_image_processor.py
src/cv_pipeline/: __init__.py  adaptive_medical_detector.py  detector.py  medical_detector_factory.py  preprocessor.py  real_lpp_detector.py  yolo_loader.py
src/db/: agent_analysis_client.py  raw_outputs_client.py  supabase_client.py  supabase_client_refactored.py  training_database.py  training_database_mock.py
src/interfaces/: __init__.py  slack_orchestrator.py
src/medical/: __init__.py  medical_decision_engine.py  risk_assessment.py
src/messaging/: adk_tools.py  slack_block_templates.py  slack_notifier_refactored.py  twilio_client.py  whatsapp_processor.py
src/messaging/whatsapp/: __init__.py  isolated_bot.py  processor.py
src/ml/: model_tracking.py
src/monitoring/: adk_wrapper.py  agentops_client.py  medical_telemetry.py  response_monitoring.py
src/pipeline/: dataset_integration.py  training_pipeline.py
src/redis_layer/: __init__.py  protocol_indexer.py  vector_service.py
src/security/: __init__.py
src/storage/: __init__.py  medical_image_storage.py
src/synthetic/: patient_generator.py
src/systems/: README.md  __init__.py  clinical_processing.py  human_review_queue.py  medical_decision_engine.py  medical_knowledge.py  medical_knowledge_enhanced.py  minsal_medical_decision_engine.py  voice_medical_analysis.py
src/systems/config/: __init__.py  clinical_guidelines.json  minsal_extracted_info.json
src/utils/: __init__.py  access_control_matrix.py  alias_generator.py  audit_service.py  cache.py  energy_monitor.py  error_handling.py  failure_handler.py  image_utils.py  logger.py  medical_logger.py  performance_profiler.py  rate_limiter.py  secure_logger.py  security_validator.py  shared_utilities.py  validators.py
src/utils/tests/: test_image_utils.py
src/web/: __init__.py  lambda_handler.py  main.py
tests/: __init__.py  conftest.py  shared_fixtures.py  test_hackathon_medical_functionality.py  test_integration_validation.py  test_medical_functionality.py  test_medical_simple.py  test_shared_utilities.py
ui_components/: __init__.py  clinical_components.py  medical_interface.py  medical_styles.css  risk_visualization.py  smartcare_interface.py  smartcare_styles.css
(+13 files in other folders)
